update customer page

--- a/Source/CustomerPage.xaml
+++ b/Source/CustomerPage.xaml
@@ -35,6 +35,7 @@
             <Button Content="Tìm kiếm"
                     Name="SearchButton"
                     Width="100"
+                    Height="30"
                     Style="{StaticResource ButtonPrimary}"
                     hc:BorderElement.CornerRadius="15"
                     HorizontalAlignment="Right"/>
@@ -58,13 +59,23 @@
                     Click="RefreshButton_Click"/>
         </StackPanel>
 
+        <TextBlock Text="Danh sách sản phẩm"
+                   Grid.Row="2"
+                   Grid.Column="1"
+                   Panel.ZIndex="2"
+                   VerticalAlignment="Bottom"
+                   FontSize="20"
+                   FontWeight="Bold"
+                   Margin="15 0 0 15"
+                   IsHitTestVisible="False"
+                   Foreground="Blue"/>
         <Border x:Name="ListDataGridBorder"
                 BorderBrush="Blue"
                 BorderThickness="0.5"
                 CornerRadius="15"
                 Grid.Row="2"
                 Grid.Column="1"
-                Margin="0 5 0 0"
+                Margin="0 10 0 0"
                 Padding="8"
                 Grid.ColumnSpan="2">
             <DataGrid x:Name="CustomerDataGrid"
@@ -87,19 +98,49 @@
 
             </DataGrid>
 
+
+
         </Border>
 
+        <TextBlock Text="Giỏ hàng"
+                   Grid.Row="3"
+                   Grid.Column="1"
+                   Panel.ZIndex="2"
+                   VerticalAlignment="Bottom"
+                   FontSize="20"
+                   FontWeight="Bold"
+                   Margin="15 0 0 15"
+                   IsHitTestVisible="False"
+                   Foreground="Blue"/>
         <Border x:Name="OrderDataGridBorder"
-                BorderBrush="CadetBlue"
+                BorderBrush="Blue"
                 BorderThickness="0.5"
                 CornerRadius="15"
                 Grid.Row="3"
                 Grid.Column="1"
                 Margin="0 5 0 0"
                 Padding="8">
-            <DataGrid x:Name="OrderDataGrid">
+            
+            <DataGrid x:Name="OrderDataGrid"
+                      AutoGenerateColumns="False"
+                      IsReadOnly="True">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="Sản phẩm"
+                                        Width="*"
+                                        Binding="{Binding TenHangHoa}"/>
+                    <DataGridTextColumn Header="Loại hàng"
+                                        Width="*"
+                                        Binding="{Binding TenLoaiHang}"/>
+                    <DataGridTextColumn Header="Danh mục"
+                                        Width="*"
+                                        Binding="{Binding TenDanhMuc}"/>
+                    <DataGridTextColumn Header="Đơn giá"
+                                        Width="*"
+                                        Binding="{Binding DonGia}"/>
+                </DataGrid.Columns>
 
             </DataGrid>
+           
         </Border>
 
     </Grid>
