--- a/Source/BasketWindow.xaml
+++ b/Source/BasketWindow.xaml
@@ -9,6 +9,10 @@
         Title="Giỏ hàng" Height="450" Width="500"
         WindowStartupLocation="CenterScreen" Loaded="Window_Loaded">
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="88*"/>
+            <ColumnDefinition Width="159*"/>
+        </Grid.ColumnDefinitions>
 
         <Grid.RowDefinitions>
             <RowDefinition Height="10"/>
@@ -16,11 +20,10 @@
             <RowDefinition Height="1*"/>
             <RowDefinition Height="10"/>
         </Grid.RowDefinitions>
-        
+
         <DataGrid x:Name="BasketDataGrid"
-                  Grid.Row="1"
                   AutoGenerateColumns="False"
-                  IsReadOnly="True">
+                  IsReadOnly="True" Grid.ColumnSpan="2" Margin="0,10,-0.4,0.4" Grid.RowSpan="2">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Sản phẩm"
                                     Width="*"
@@ -40,7 +43,7 @@
         <StackPanel Orientation="Horizontal"
                     Grid.Row="2"
                     HorizontalAlignment="Center"
-                    VerticalAlignment="Center">
+                    VerticalAlignment="Center" Grid.ColumnSpan="2" Margin="145,2.6,145.6,2.4">
             <Button x:Name="OrderButton"
                 Content="Đặt hàng"
                 Style="{StaticResource ButtonPrimary}"
@@ -56,6 +59,6 @@
                     Height="30"
                     Background="Red" Click="RemoveButton_Click"/>
         </StackPanel>
-        
+
     </Grid>
 </Window>
