--- a/Source/BasketWindow.xaml
+++ b/Source/BasketWindow.xaml
@@ -10,8 +10,10 @@
         WindowStartupLocation="CenterScreen" Loaded="Window_Loaded">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="88*"/>
-            <ColumnDefinition Width="159*"/>
+            <ColumnDefinition Width="10"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="10"/>
         </Grid.ColumnDefinitions>
 
         <Grid.RowDefinitions>
@@ -23,7 +25,11 @@
 
         <DataGrid x:Name="BasketDataGrid"
                   AutoGenerateColumns="False"
-                  IsReadOnly="True" Grid.ColumnSpan="2" Margin="0,10,-0.4,0.4" Grid.RowSpan="2">
+                  IsReadOnly="True" 
+                  Grid.Column="1"
+                  Grid.ColumnSpan="2" 
+                  Margin="0,10,-0.4,0.4" 
+                  Grid.RowSpan="2">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Sản phẩm"
                                     Width="*"
@@ -40,25 +46,42 @@
             </DataGrid.Columns>
         </DataGrid>
 
-        <StackPanel Orientation="Horizontal"
-                    Grid.Row="2"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center" Grid.ColumnSpan="2" Margin="145,2.6,145.6,2.4">
-            <Button x:Name="OrderButton"
+            <StackPanel Orientation="Horizontal"
+                    HorizontalAlignment="right"
+                    VerticalAlignment="Center" 
+                        DockPanel.Dock="right"
+                        Grid.Column="2"
+                        Grid.Row="2">
+                <Button x:Name="OrderButton"
                 Content="Đặt hàng"
                 Style="{StaticResource ButtonPrimary}"
                 hc:BorderElement.CornerRadius="15"
                 Width="100"
-                Height="30"/>
-            <TextBlock Text=" "/>
-            <Button x:Name="RemoveButton"
+                Height="30" 
+                        Click="OrderButton_Click"/>
+                <TextBlock Text=" "/>
+                <Button x:Name="RemoveButton"
                     Content="Xóa khỏi giỏ"
                     Style="{StaticResource ButtonPrimary}"
                     hc:BorderElement.CornerRadius="15"
                     Width="100"
                     Height="30"
                     Background="Red" Click="RemoveButton_Click"/>
-        </StackPanel>
+            </StackPanel>
+
+            <StackPanel Orientation="Horizontal"
+                        Grid.Row="2"
+                        Grid.Column="1">
+                <TextBlock Text="Tổng giá trị: "
+                           FontSize="18"
+                           VerticalAlignment="Center"/>
+                <TextBlock x:Name="TotalMoneyTextBox" 
+                           Text="0"
+                           FontSize="18"
+                           VerticalAlignment="Center"/>
+            </StackPanel>
+
+        
 
     </Grid>
 </Window>
